@@ -101,7 +101,7 @@ _wrap_g_file_read_async(PyGObject *self,
   notify = g_slice_new0(PyGAsyncRequestNotify);
 
   if (!PyArg_ParseTupleAndKeywords(args, kwargs,
-                                   "O|iOO:InputStream.read_async",
+                                   "O|iOO:File.read_async",
                                    kwlist,
                                    &notify->callback,
                                    &io_priority,
@@ -142,6 +142,50 @@ _wrap_g_file_read_async(PyGObject *self,
   Py_INCREF(Py_None);
   return Py_None;
 }
+%%
+override g_file_load_contents kwargs
+static PyObject *
+_wrap_g_file_load_contents(PyGObject *self,
+                           PyObject *args,
+                           PyObject *kwargs)
+{
+    static char *kwlist[] = { "cancellable", NULL };
+    GCancellable *cancellable;
+    PyGObject *pycancellable = NULL;
+    gchar *contents, *etag_out;
+    gsize lenght;
+    GError *error = NULL;
+    gboolean ret;
+    
+    if (!PyArg_ParseTupleAndKeywords(args, kwargs,
+                                     "|O:File.load_contents",
+                                      kwlist,
+                                      &pycancellable))
+        return NULL;
+
+    if (pycancellable == NULL || (PyObject*)pycancellable == Py_None)
+        cancellable = NULL;
+    else if (pygobject_check(pycancellable, &PyGCancellable_Type))
+        cancellable = G_CANCELLABLE(pycancellable->obj);
+    else {
+        PyErr_SetString(PyExc_TypeError,
+                        "cancellable should be a gio.Cancellable");
+        return NULL;
+    }
+
+    ret = g_file_load_contents(G_FILE(self->obj), cancellable,
+                               &contents, &lenght, &etag_out, &error);
+
+    if (pyg_error_check(&error))
+        return NULL;
+
+    if (ret)
+        return Py_BuildValue("(sks)", contents, lenght, etag_out);
+    else {
+        Py_INCREF(Py_None);
+        return Py_None;      
+    }
+}
 /* GFile.append_to_async */
 /* GFile.create_async */
 /* GFile.enumerate_children_async */
@@ -163,7 +207,6 @@ _wrap_g_file_read_async(PyGObject *self,
 /* GFile.query_writable_namespaces: No ArgType for GFileAttributeInfoList* */
 /* GFile.set_attribute: No ArgType for gpointer */
 /* GFile.set_attributes_finish: No ArgType for GFileInfo** */
-/* GFile.load_contents: No ArgType for char** */
 /* GFile.load_contents_finish: No ArgType for char** */
 /* GFile.load_partial_contents_finish: No ArgType for char** */
 /* GFile.replace_contents: No ArgType for char** */
